# isotope

./: .gitignore  .goreleaser-hook.sh  .goreleaser.yaml  1  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  dist-manifest.json
.github/workflows/: docker.yml  multi-arch-release.yml  release.yml  rust.yml
src/: main.rs
src/analyze/: analysis.rs  mod.rs
src/analyzer/: analyzer_trait.rs  aws_config_analyzer.rs  cloudwatch_analyzer.rs  ebs_analyzer.rs  ec2_snapshot_analyzer.rs  eip_analyzer.rs  eip_analzyer.rs  iam_analyzer.rs  macie_analyzer.rs  mod.rs  rds_analyzer.rs  s3_analyzer.rs  sg_analyzer.rs  sts_analyzer.rs  types.rs
src/bedrock/: mod.rs  prompt.rs
src/cache/: mod.rs
src/config/: cache.rs  mod.rs
src/configure/: mod.rs
src/outputs/: mod.rs
src/utils/: iam.rs  mod.rs  sts.rs  sts.rscccccucfuctnkhhrehbuhfgugijgiutbetkdvbhhdvkh
