[package]
name = "isotope"
version = "0.0.1"
edition = "2021"
description = "Isotope scans AWS services and makes suggestions on how to improve them using Artificial Intelligence."
license = "MIT"
[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-home-dir = "0.2.0"
serde_json = "1.0.107"
serde = {version= "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "0.56.1"
colored = "2.0.4"
futures = "0.3.28"
async-trait = "0.1.73"
aws-sdk-s3 = "0.33.0"
aws-sdk-macie = "0.33.0"
v = "0.1.0"
aws-sdk-config = "0.33.0"
clap = { version = "4.4.6", features = ["derive"] }
aws-sdk-sts = "0.33.0"
aws-sdk-iam = "0.33.0"
aws-smithy-runtime-api = { version = "0.56.1", features = ["client"] }
unescape = "0.1.0"
