[package]
name = "isotope"
version = "0.0.3"
repository = "https://github.com/isotope-rs/isotope.git"
edition = "2021"
description = "Isotope scans AWS services and makes suggestions on how to improve them using Artificial Intelligence."
license = "MIT"
[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
split-debuginfo = "packed"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-home-dir = "0.2.0"
serde_json = "1.0.107"
serde = {version= "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "0.56.1"
colored = "2.0.4"
futures = "0.3.28"
async-trait = "0.1.73"
aws-sdk-s3 = "0.33.0"
aws-sdk-macie = "0.33.0"
v = "0.1.0"
aws-sdk-config = "0.33.0"
clap = { version = "4.4.6", features = ["derive"] }
aws-sdk-sts = "0.33.0"
aws-sdk-iam = "0.33.0"
aws-smithy-runtime-api = { version = "0.56.1", features = ["client"] }
unescape = "0.1.0"
aws-sdk-bedrock = "0.3.0"
aws-sdk-bedrockruntime = "0.3.0"
base64 = { version = "0.21.4", features = [] }
aws-sdk-rds = "0.34.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "isotope-rs/homebrew-isotope"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
