[package]
name = "isotope"
version = "0.0.6"
repository = "https://github.com/isotope-rs/isotope.git"
edition = "2021"
description = "Isotope scans AWS services and makes suggestions on how to improve them using Artificial Intelligence."
license = "MIT"
[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
split-debuginfo = "packed"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
aws-config = "0.57.1"
aws-sdk-bedrock = "0.4.0"
aws-sdk-bedrockruntime = "0.4.0"
aws-sdk-config = "0.35.0"
aws-sdk-ebs = "0.35.0"
aws-sdk-ec2 = "0.35.0"
aws-sdk-iam = "0.35.0"
aws-sdk-macie = "0.35.0"
aws-sdk-rds = "0.35.0"
aws-sdk-s3 = "0.35.0"
aws-sdk-sts = "0.35.0"
aws-smithy-runtime-api = { version = "0.56.1", features = ["client"] }
aws-types = "0.57.1"
base64 = { version = "0.21.4", features = [] }
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
indicatif = "0.17.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simple-home-dir = "0.2.0"
tokio = { version = "1", features = ["full"] }
unescape = "0.1.0"
v = "0.1.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "isotope-rs/homebrew-isotope"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
